release notes databene webdecs 0.8.4
------------------------------------

Enhancements
------------
- Improved handling of missing ScriptFactory configurations
- Supporting further HTML elements:
  - OrderedList
  - UnorderedList
  - TableHead
  - TableBody
  - TableFoot
  - CssStyle
- Supporting HTML escaping and linfeed-to-<br> conversion and raw text


Changes
-------
- Escaping HTML texts by default


Bug Fixes
---------
- Supporting node fillcolor in DotWriter